Simple task test

--- a/config
+++ b/config
@@ -1,8 +1,8 @@
 # Group (Number and Port)
-LAB_GROUP=X
-LAB_GROUP_PORT=Y
+LAB_GROUP=A5
+LAB_GROUP_PORT=40005
 
 # Robot (ID and IP)
-ROBOT_ID=Z
-ROBOT_IP=W
+ROBOT_ID=5
+ROBOT_IP=192.168.1.155
 
